fixed menu adjusted to not collapse logo on iphone 5 and screenshots column sizing change

--- a/css/minoritywins.css
+++ b/css/minoritywins.css
@@ -130,7 +130,7 @@
   .fixed-menu{
       z-index: 40;
       position: fixed;
-      margin-left: 20px;
+      margin-left: 5px;
       margin-top: 20px;
   }
   .fixed-menu-btn{
@@ -278,7 +278,7 @@
     }
 
     .intro{
-        max-width: 250px;
+        max-width: 230px;
     }
   }
 
